# libra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/toolchains/: arm64.cmake  armhf.cmake  riscv64.cmake
include/: libra.h  libra_shader.h
src/: audio.c  audio.h  core.c  core.h  emulnk.c  emulnk.h  environment.c  environment.h  image.c  input.c  input.h  libra.c  libra_internal.h  menu.c  netplay.c  netplay.h  netsock.c  netsock.h  ratio.c  ratio.h  rewind.c  rewind.h  rollback.c  rollback.h  shader.c  slang_spirv.cpp  vfs.c  vfs.h  video.c
test/: CMakeLists.txt  main.c
tools/: relay.c
